--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
   <video autoplay muted loop id="bg-video">
-    <source src="https://github.com/demnguocthpt/video2/1.mp3" type="video/mp4" />
+    <source src="1.mp4" type="video/mp4" />
   </video>
 
   <div id="overlay">
